--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -1,11 +1,37 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Tasks</title>
 </head>
 <body>
-hello
+<h1>Task List</h1>
+<table border="1">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Started On</th>
+        <th>Completed On</th>
+        <th>Location</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="task : ${tasks}">
+        <td th:text="${task.id}"></td>
+        <td th:text="${task.title}"></td>
+        <td>
+            <span th:if="${task.startedOn != null}" th:text="${#temporals.format(task.startedOn, 'yyyy-MM-dd HH:mm')}"></span>
+            <span th:unless="${task.startedOn != null}">—</span>
+        </td>
+        <td>
+            <span th:if="${task.completedOn != null}" th:text="${#temporals.format(task.completedOn, 'yyyy-MM-dd HH:mm')}"></span>
+            <span th:unless="${task.completedOn != null}">—</span>
+        </td>
+        <td th:text="${task.location}"></td>
+    </tr>
+
+    </tbody>
+</table>
 </body>
 </html>
