--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -14,6 +14,7 @@
         <th>Started On</th>
         <th>Completed On</th>
         <th>Location</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -29,8 +30,11 @@
             <span th:unless="${task.completedOn != null}">—</span>
         </td>
         <td th:text="${task.location}"></td>
+        <td>
+            <a th:href="@{'/api/tasks/' + ${task.id}}">View</a> |
+            <a th:href="@{'/api/tasks/edit/' + ${task.id}}">Edit</a>
+        </td>
     </tr>
-
     </tbody>
 </table>
 </body>
