--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -31,9 +31,14 @@
         </td>
         <td th:text="${task.location}"></td>
         <td>
-            <a th:href="@{'/api/tasks/' + ${task.id}}">View</a>
-            <a th:href="@{'/api/tasks/edit/' + ${task.id}}">Edit</a>
+            <a th:href="@{'/api/tasks/' + ${task.id}}">View</a> |
+            <a th:href="@{'/api/tasks/edit/' + ${task.id}}">Edit</a> |
+
+            <form th:action="@{'/api/tasks/delete/' + ${task.id}}" method="post" style="display:inline;">
+                <button type="submit" onclick="return confirm('Are you sure you want to delete this task?');">Delete</button>
+            </form>
         </td>
+
     </tr>
     </tbody>
 </table>
