--- a/src/main/resources/templates/task-create.html
+++ b/src/main/resources/templates/task-create.html
@@ -20,6 +20,9 @@
     <label>Location:</label>
     <input type="text" th:field="*{location}" required/><br/>
 
+    <label>Assigned To (Engineer Username):</label>
+    <input type="text" th:field="*{assignedTo}" placeholder="Optional"/><br/>
+
     <button type="submit">Create</button>
 </form>
 
