--- a/src/main/resources/templates/task-edit.html
+++ b/src/main/resources/templates/task-edit.html
@@ -22,6 +22,9 @@
     <label>Location:</label>
     <input type="text" th:field="*{location}" required/><br/>
 
+    <label>Assigned To (Engineer Username):</label>
+    <input type="text" th:field="*{assignedTo}" placeholder="Optional"/><br/>
+
     <button type="submit">Update</button>
 </form>
 
