--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -14,6 +14,7 @@
         <th>Started On</th>
         <th>Completed On</th>
         <th>Location</th>
+        <th>Assigned To</th>
         <th>Actions</th>
     </tr>
     </thead>
@@ -31,6 +32,10 @@
         </td>
         <td th:text="${task.location}"></td>
         <td>
+            <span th:if="${task.assignedTo != null}" th:text="${task.assignedTo}"></span>
+            <span th:unless="${task.assignedTo != null}">Not assigned</span>
+        </td>
+        <td>
             <a th:href="@{'/api/tasks/' + ${task.id}}">View</a> |
             <a th:href="@{'/api/tasks/edit/' + ${task.id}}">Edit</a> |
 
@@ -38,10 +43,10 @@
                 <button type="submit" onclick="return confirm('Are you sure you want to delete this task?');">Delete</button>
             </form>
         </td>
-
     </tr>
     </tbody>
 </table>
+
 <a th:href="@{/api/tasks/create}">+ Create New Task</a>
 </body>
 </html>
